# Padel-tracker

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  render.yaml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial.py  002_leagues_seasons.py  003_placeholder_members.py  004_auto_approve_existing.py  005_match_ended_early.py  006_recompute_elo_history.py
app/: __init__.py  auth_utils.py  bootstrap.py  config.py  db.py  deps.py  league_helpers.py  main.py  middleware.py  templating.py
app/models/: __init__.py  league.py  match.py  season.py  set_score.py  user.py
app/routers/: __init__.py  admin.py  auth.py  invites.py  leaderboard.py  leagues.py  matches.py  schedule.py
app/services/: elo.py  scoring.py  seasons.py  stats.py
app/templates/: base.html
app/templates/admin/: index.html
app/templates/auth/: login.html  pending.html  register.html
app/templates/invites/: accept.html  invalid.html
app/templates/leaderboard/: _table.html  index.html
app/templates/leagues/: index.html  members.html  new.html
app/templates/matches/: detail.html
app/templates/schedule/: index.html  new_match.html
app/utils/: slug.py
preview/: index.html  leaderboard-light.html  leagues-dashboard.html  login-light.html  match-light.html  members-light.html  schedule-light.html
tests/: test_elo.py  test_scoring.py  test_seasons.py
