[project]
name = "padel-tracker"
version = "0.1.0"
description = "Padel match schedule, scoring, and leaderboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "passlib[bcrypt]>=1.7.4",
    "itsdangerous>=2.2.0",
    "python-multipart>=0.0.17",
    "jinja2>=3.1.4",
    "email-validator>=2.2.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
